src/components/styles.css
.main_container {
  margin: auto 30px;
}

p {
  font-family: "Ubuntu", sans-serif;
}

#experience-photo {
  width: 300px;
}

.board-container {
    display: grid;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto auto;
    justify-content: center;
   }

.board-item-container {
  display: grid;
  width: 100px;
  height: 100px;
  border: 2px solid black;
  margin: auto;
  align-content: center;
  justify-content: center;
  cursor: pointer;
}

.board-item_checked {
  overflow: hidden;
  position: relative;
}

.board-item_photo-cover {
  max-width: 100px;
  object-fit: cover;
  z-index: 3;
  opacity: 0.7;
  width: 100px;
  height: auto;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

.item-text_checked {
  /* position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  border-radius: 5px;
  z-index: 5;
  font-family: system-ui; */
}

